# small-fixed-array

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
.github/workflows/: ci.yml
src/: array.rs  inline.rs  length.rs  lib.rs  logging.rs  non_empty_array.rs  static.rs  string.rs  truncating_into.rs
tests/: tests.rs
