[package]
name = "small-fixed-array"
description = "A crate providing fixed length immutable collections with a low memory footprint."
repository = "https://github.com/GnomedDev/small-fixed-array"
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.193", optional = true }
typesize = { version = "0.1.3", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
typesize = ["dep:typesize"]
serde = ["dep:serde"]
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
