[package]
name = "small-fixed-array"
description = "A crate providing fixed length immutable collections with a low memory footprint."
repository = "https://github.com/GnomedDev/small-fixed-array"
keywords = ["array", "string", "collection", "low-memory"]
categories = ["data-structures"]
rust-version = "1.70"
version = "0.4.4"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.193", optional = true }
to-arraystring = { version = "0.2.1", optional = true }
typesize = { version = "0.1.3", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1"

[features]
default = ["std"]

# Add new features to the jobs in .github/workflows/ci.yml.
to-arraystring = ["dep:to-arraystring"]
typesize = ["dep:typesize"]
serde = ["dep:serde"]
nightly = []
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
